[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/freeze.gd" type="Script" id=1]
[ext_resource path="res://assets/ice.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/foo40.fnt" type="BitmapFont" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 47.5308, 45.3414 )

[node name="area" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="ice" type="Sprite" parent="."]

transform/scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="freeze_cooldown" type="Timer" parent="."]

process_mode = 1
wait_time = 20.0
one_shot = false
autostart = false

[node name="countdown" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -25.0
margin/top = -18.0
margin/right = 31.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="." to="." method="_on_area_input_event"]

[connection signal="timeout" from="freeze_cooldown" to="." method="_on_freeze_cooldown_timeout"]


